<resources>
    <string name="app_name">MedifyFeature</string>
    <string name="home">Home</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="families_health">Families Health</string>
    <string name="invite_contacts">Invite Contacts</string>
    <string name="invite_all_friends">Invite All Friends</string>
    <string name="give_access">Give Access\n</string>
    <string name="invite_permission_alert">To help you invite your friends on Medify, allow access to your contacts</string>
    <string name="invite_title">Invite your contacts to join Medify</string>
    <string name="invite_friends_whatsapp">Invite Friends Via Whatsapp</string>
    <string name="invite_friends_title">Invite friends to follow you</string>
    <string name="invite">Invite\n</string>
</resources>