<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                    <RelativeLayout
                        android:id="@+id/backLayout"
                        android:layout_width="55dp"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="21dp"
                            android:src="@drawable/matisse_icon_back" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/backLayout"
                        android:layout_toRightOf="@+id/backLayout"
                        android:gravity="center"
                        android:paddingEnd="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/invite_friends_title"
                        android:textColor="@color/black"
                        android:textSize="18dp" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/whatsappInviteLayout"
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    android:background="#f0f0f0"
                    android:gravity="center">

                    <RelativeLayout
                        android:id="@+id/inviteWhatsAppLayout"
                        android:layout_width="305dp"
                        android:layout_height="40dp"
                        android:background="@drawable/rounded_invite_friends_button_bg"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/whatsappImageView"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerVertical="true"
                            android:clickable="false"
                            android:focusable="false"
                            android:padding="10dp"
                            android:src="@drawable/ic_invite_whatsapp"
                            android:visibility="visible" />


                        <TextView
                            android:id="@+id/whatsAppInviteTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_toEndOf="@+id/whatsappImageView"
                            android:layout_toRightOf="@+id/whatsappImageView"
                            android:clickable="false"
                            android:focusable="false"
                            android:fontFamily="@font/lato_bold"
                            android:text="@string/invite_friends_whatsapp"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/inviteAllLayout"
                android:layout_below="@+id/mainLayout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <FrameLayout
                        android:id="@+id/invitePermissionView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <include layout="@layout/invite_empty" />

                            <include layout="@layout/invite_empty" />


                            <include layout="@layout/invite_empty" />

                            <include layout="@layout/invite_empty" />

                            <include layout="@layout/invite_empty" />

                            <include layout="@layout/invite_empty" />

                            <include layout="@layout/invite_empty" />

                            <include layout="@layout/invite_empty" />

                            <include layout="@layout/invite_empty" />

                            <include layout="@layout/invite_empty" />

                            <include layout="@layout/invite_empty" />

                            <include layout="@layout/invite_empty" />

                            <include layout="@layout/invite_empty" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/gradient_invite" />
                    </FrameLayout>

                    <RelativeLayout
                        android:id="@+id/relativeContactsList"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:clickable="false"
                            android:focusable="false"
                            android:fontFamily="@font/lato_bold"
                            android:text="@string/invite_title"
                            android:textColor="#55595e"
                            android:textSize="14sp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recylerView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@+id/title"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="20dp" />

                    </RelativeLayout>


                </LinearLayout>

                <FrameLayout
                    android:id="@+id/frameLayoutDialog"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="253dp"
                        android:layout_height="229dp"
                        android:layout_gravity="center"
                        android:background="@drawable/dialog_shape"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="20dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_invite_permission" />

                            <TextView
                                android:id="@+id/message"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/lato_bold"
                                android:gravity="center"
                                android:text="@string/invite_permission_alert"
                                android:textColor="@color/black"
                                android:textSize="15dp" />

                            <LinearLayout
                                android:id="@+id/giveAccessLayout"
                                android:layout_width="106dp"
                                android:layout_height="30dp"
                                android:layout_gravity="center"
                                android:layout_marginTop="20dp"
                                android:background="@drawable/rounded_mobile_signup_bg"
                                android:gravity="center"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/giveAccessTextView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/lato_bold"
                                    android:gravity="center"
                                    android:text="@string/give_access"
                                    android:textAllCaps="false"
                                    android:textColor="@color/white"
                                    android:textSize="14sp" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>
                </FrameLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/inviteAllLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/rectangle_invite_all"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/inviteAllTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center"
                    android:text="@string/invite_all_friends"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </RelativeLayout>

            <include
                layout="@layout/layout_progress"
                android:visibility="gone" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
